--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,90 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1 {
+  color: #06365f;
+  font-size: 30px;
+  margin: 20px 30px;
+}
+
+.text {
+  font-size: 17px;
+  margin: 25px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: auto;
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.left-column {
+  display: flex;
+  align-items: center;
+  padding: 5%;
+}
+
+.right-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5%;
+}
+
+.background-box {
+  background: url("../images/frame.png");
+  background-size: cover;
+  width: 80%;
+  padding: 0 20px;
+  margin: 0 20px;
+}
+
+.info {
+display: flex;
+justify-content: flex-start;
+width: 80%;
+padding: 0 5%;
+width: auto;
+}
+
+.log-in {
+  border: 1px solid #06365f ;
+  background-color: #1c5380;
+  height: 40px;
+  padding: 5px;
+}
+
+ul {
+  font-size: 12.5px;
+  text-transform: uppercase;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 60%;
+}
+
+li {
+  display: inline-block;
+}
+
+
+a {
+  color:#1c5380;
+  text-decoration: none;
+}
+
+
+.copyright {
+  color:grey;
+}
+
+.button {
+  border: none;
+  margin: 10px;
+}
