--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,88 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.big-phone {
+  float: left;
+  margin-right: 50px;
+}
+
+.section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 100px;
+  margin-left: 70px;
+}
+
+.logo-login {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-right: 50px;
+}
+.logo {
+  width: 200px;
+}
+.log-in {
+  background-color: #1c5380;
+  border-radius: 10px;
+  text-decoration: none;
+  text-align: center;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+}
+
+.caja-articulo {
+  font-size: 20px;
+  text-align: left;
+  border-radius: 20px;
+  border: 0.1px solid lightgray;
+  box-shadow: 1px 1px 1px 0 black;
+  padding: 20px;
+  margin: 40px;
+}
+
+h1 {
+  font-size: 30px;
+  text-align: left;
+  font-weight: bold;
+  color: #06365f;
+}
+
+p {
+  font-size: 20px;
+}
+
+.download-getit {
+  margin: 0 50px;
+}
+
+.nav ul {
+  list-style: none;
+  display: block;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+}
+
+nav a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  list-style: none;
 }
