--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,12 @@ p{
 }
 
 .Text{
+  margin-top: 50px;
+  padding: -100px 50px 30px 40px;
+  text-align: left;
+}
+
+.Frame{
   background-size: auto;
   background-image:url(/images/frame.png);
   background-repeat:no-repeat;
@@ -66,7 +72,6 @@ p{
   padding: -150px 50px 30px 40px;
   text-align: left;
 }
-
 
 
 
