--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ body {
   }
 
   .inst{
-    width: 70px;
+    height: 70px;
   }
 
 .login{
@@ -62,7 +62,7 @@ p{
 }
 
 .Text{
-  margin-top: -50px;
+  margin-top: -20px;
   padding: 0px 50px 30px 40px;
   text-align: left;
 }
