--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,8 @@ body {
   justify-content: space-between;
   margin-top: 100px;
   margin-left: 70px;
+  max-width:1000px;
+  margin-left: 70px;
 }
 
 .logo-login {
@@ -56,6 +58,8 @@ body {
   box-shadow: 1px 1px 1px 0 black;
   padding: 20px;
   margin: 40px;
+  background-color:white;
+
 }
 
 h1 {
@@ -73,14 +77,6 @@ p {
   margin: 0 50px;
 }
 
-.nav ul {
-  list-style: none;
-  display: block;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: row;
-  text-decoration: none;
-}
 
 nav a {
   text-decoration: none;
@@ -89,3 +85,15 @@ nav a {
   text-transform: uppercase;
   list-style: none;
 }
+ .nav-bar li {
+ padding:20px;
+ }
+
+ .nav-bar ul{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: row;
+   flex-decoration:none;
+   list-style: none;
+ }
