--- a/styles/style.css
+++ b/styles/style.css
@@ -67,8 +67,9 @@ p{
 
 .Text-2{
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .Frame{
