--- a/styles/style.css
+++ b/styles/style.css
@@ -67,9 +67,8 @@ p{
 
 .Text-2{
     position: absolute;
-    top: 0%;
-    left: 0%;
-    transform: translate(-50%, -50%);
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .Frame{
