--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,106 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+.content-text > h1 {
+  color: #06365f;
+  font-size: 1.5em;
+  width: 55%;
+}
+
+.content-text p {
+  font-size: 0.9em;
+  font-weight: bolder;
+}
+
+.content-text {
+  width: 450px;
+  padding-top: 15px;
+  padding-left: 30px;
+  padding-right: 15px;
+}
+
+.downloads {
+  padding-top: 30px; 
+}
+
+.apple {
+  padding-right: 15px;
+}
+
+.logo {
+  width: 200px;
+}
+
+.home {
+  width: 25px;
+  padding
+}
+
+.button > a {
+  text-decoration: none;
+  padding-left: 10px;
+  font-weight: bolder;
+}
+
+.button {
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  padding: 8px 15px;
+  display: inline-flex;
+}
+
+#links-footer > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-weight: bold;
+  padding: 30px 0;
+}
+
+#links-footer a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.copyright {
+  color: gray;
+}
+
+#main-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding-top: 100px;
+  background: linear-gradient(
+    to bottom, 
+    #06365f 25%, 
+    #ffffff 50%, 
+    #ffffff 25%
+  );
+}
+
+.content-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+
+.home-button {
+  border-width: 2px;
+}
+
+.span > a {
+  background-color: green;
 }
