--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ body {
 
 #main-section {
   width: 700px;
-  height: 100vh;
   display: flex;
   margin: auto;
   justify-content: space-between;
@@ -44,10 +43,86 @@ body {
 #card {
   /* background-color: white; */
   border-radius: 10px;
-  height: 600px;
+  height: 100%;
 
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
   background-size: contain;
   /* box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.3); */
+}
+
+#container-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#container-header button img {
+  width: 18px;
+}
+
+#container-header button {
+  background-image: linear-gradient(180deg, rgb(110,146,176) 10%, rgb(73,117,154) 90%);
+  border: 1px solid rgb(58,101,138);
+  border-radius: 3px;
+  padding: 9px;
+  box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  width: 85px;
+}
+
+#container-header button:hover {
+  cursor: pointer;
+}
+
+#card {
+  margin-top: 7px;
+  padding: 15px 40px;
+}
+
+#card h2 {
+  color: rgb(15,56,93);
+  font-size: 20px;
+}
+
+#card p {
+  font-size: 14px;
+}
+
+#download-links-container {
+  display: flex;
+  width: 85%;
+  justify-content: space-between;
+}
+
+#download-links-container img{
+  width: 130px;
+}
+
+footer {
+  margin: auto;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  width: 550px;
+  align-items: center;
+}
+
+footer a {
+  color: rgb(100,140,165);
+  font-weight: bold;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+footer p {
+  color: #aaa;
+  font-weight: bold;
+  font-size: 12px;
+  text-transform: uppercase;
 }
