--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,77 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+/* PAGE */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#background{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: #1c5380;
+}
+
+.page {
+  margin: 0 auto;
+}
+
+/* BLOCK */
+
+.general-block{
+  display:flex;
+  justify-content: center;
+  margin: 10% 10% 2% 10%;
+}
+
+.right-block{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 30%;
+  margin-left: 50px;
+}
+
+.title-login{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button{
+  background-color: #1c5380;
+  color: white;
+  padding: 5px 15px;
+}
+
+.text-block{
+  background-color: white;
+  padding: 0px 25px;
+  margin-top: 20px;
+  border-radius: 6px;
+  box-shadow: 0px -1px 11px -3px rgba(0,0,0,0.65);
+}
+
+h1 {
+  color: #06365f;
+  line-height: 40px;
+}
+
+/* FOOTER */
+
+.footer{
+  display: flex;
+  justify-content: center;
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-between;
+  align-items: center; 
+  width: 700px;
+  color: #06365f;
+}
+
