--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,139 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  display: flex;
+  height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+.background-blue {
+  background: rgb(71, 116, 154);
+  background: linear-gradient(
+    180deg,
+    rgba(71, 116, 154, 1) 37%,
+    rgba(48, 95, 135, 1) 100%
+  );
+  height: 40vh;
+  width: 100vw;
+  position: relative;
+  align-self: flex-start;
+}
+
+.main {
+  position: absolute;
+  display: flex;
+  margin-top: 100px;
+}
+
+article {
+  background: #fff;
+  border-radius: 6px;
+  padding: 25px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+h1 {
+  color: #05355e;
+}
+
+.right-column {
+  max-width: 500px;
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo-website {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.logo-website button {
+  background: rgb(105, 147, 179);
+  background: linear-gradient(
+    180deg,
+    rgba(105, 147, 179, 1) 37%,
+    rgba(66, 116, 156, 1) 100%
+  );
+  border: 1px solid #215682;
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
+  height: 40px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.logo-website button p {
+  margin-left: 10px;
+}
+
+footer {
+  width: 50%;
+  margin-bottom: 30px;
+}
+
+footer ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-between;
+}
+
+li a {
+  text-decoration: none;
+  color: #517fa4;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.copyright {
+  color: #aaaaab;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+@media (max-width: 1100px) {
+  footer {
+    width: 80%;
+  }
+}
+
+@media (max-width: 900px) {
+  .left-column {
+    display: none;
+  }
+  .main {
+    height: 73vh;
+  }
+  .right-column {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 680px) {
+  footer ul {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  footer ul li {
+    margin-left: 20px;
+  }
 }
