--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,48 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+
+body, html {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+ 
+}
+.backgroundBlue {
+height: 25vw;
+font-size: 50px;
+display: inline-block;
+width: 100vw;
+background: #06365f
+}
+
+#divider {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+#footer {
+  color: grey; 
+  font-size: 0.5rem;
+  font-weight: 700;
+
+}
+
+#footer ul {
+  list-style: none;
+	display: flex;
+	justify-content: space-around;
+  align-items: center;
+  padding: 10px 400px 10px 400px; 
+}
+
+#footer a {
+  text-decoration: none;
+  color: #1c5380;
+ }
+
+.copyRight {
+ color:grey;
+ font-weight: 300;
 }
