--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,111 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+
+.main-page{
+  display: flex;
+  margin: 0 auto;
+  padding: 150px 0;
+  width: 1000px;
+}
+
+#background{
+  background: linear-gradient(0deg,white 50%,#3c92d8 80%,#06365f 100%);
+}
+
+.iphone{
+  display: flex;
+  align-items: center;
+  width: 318px;
+  margin-right: 30px;
+}
+
+.brand-logo{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 23px;
+  margin-right: -36px;
+}
+
+.brand-logo p{
+  color:white;
+  font-weight: bold;
+}
+
+
+.link-button{
+  background: linear-gradient(#1c5380, #06365f);
+  margin-top: 12px;
+  display: flex;
+  justify-content: space-around;
+  text-decoration: none;
+  height: 30px;
+  align-items: center;
+  width: 100px;
+}
+
+.link-button img{
+  height: 20px;
+}
+
+.column{
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+}
+
+.text{
+  width: 500px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: gray;
+}
+
+.text h3{
+  color:#1c5380;
+  font-size: 1.6em;
+  width: 260px;
+}
+
+.footer{
+  text-decoration: none;
+  list-style: none;
+}
+
+.nav-bar-ul{
+  display: flex;
+  margin: 0 auto;
+  width: 1000px;
+  padding-bottom: 50px;
+}
+
+nav ul{
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
+  color: red;
+  font-weight: bold;
+}
+
+nav ul li{
+  text-decoration: none;
+  
+}
+
+nav ul a{
+  text-decoration: none;
+  color: #1c5380;
+  font-size: 0.8em;
+}
+
+.link-instagram{
+  color: #b3b3b3;
+  font-size: 0.8em;
+  text-decoration: none;
+}
+
