--- a/styles/style.css
+++ b/styles/style.css
@@ -5,26 +5,49 @@ light blue: #1c5380
 */
 
 
-body, html {
+body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #06365f;
+  heigh:100px;
 
  
 }
-.backgroundBlue {
-height: 25vw;
-font-size: 50px;
-display: inline-block;
-width: 100vw;
-background: #06365f
+
+
+.divider {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: space-around;
+  padding: 250px 50px 20px 50px;
 }
 
-#divider {
+.main {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.secondBox {
   display: flex;
   flex-direction: column;
   align-content: center;
 }
 
+.navBar {
+  display: flex;
+  justify-content: space-evenly;
+  align-content: center;
+}
+
+#brand-logo {
+  height: 60px;
+}
+
+#brand-logo {
+  height: 30px;
+}
 #footer {
   color: grey; 
   font-size: 0.5rem;
