--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,137 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+/* GENERAL */
 
+:root {
+  --dark-blue: #06365f;
+  --light-blue: #1c5380;
+
+}
+html,
 body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Heebo', sans-serif;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+h1{
+  font-family: 'Grand Hotel', cursive;
+  font-weight: 400;
+  font-size: 5rem;
+  color: whitesmoke;
+}
+
+/* MAIN */
+
+.main section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+.blue{
+  width: 100vw;
+  height:45vh;
+  background-color: var(--dark-blue);
+}
+.white {
+  width: 100vw;
+  height: 55vh;
+  background-color: mintcream;
+}
+.content{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+}
+.phone{
+
+}
+.callToAction{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.intro{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.intro img{
+  margin: 2.5vh 7.5vw 2.5vh 2.5vw;
+}
+.button{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin: 2.5vh 4.5vw;
+  padding: 1.25vh 1.25vw 1.25vh 1.25vh;
+  justify-content: space-between;
+  background-color: var(--light-blue);
+  color: white;
+}
+.button img{
+  margin: 0 1.25vw 0 0;
+}
+.button p {
+  margin: 0;
+}
+.description{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 40vw;
+  height: 50vh;
+  padding: 2.5vh 3vw;
+  background-color:white;
+  margin: 0 5vw;
+  box-shadow: 0.2rem -0.2rem 0.5rem 0 rgba(0, 0, 0, 0.5);
+}
+.description h2 {
+align-self: start;
+color: var(--dark-blue);
+font-size: 3vh;
+}
+.description p {
+align-self: flex-start;
+  font-weight: 500;
+}
+.description span {
+  font-weight: bold;
+}
+.interacciones{
+  align-self: flex-start;
+}
+.interacciones > button {
+  margin: 0 1vw 0 0;
+  padding: 0;
+  border: none;
+}
+.footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: ;
+}
+.footer a {
+  margin: 0 2vw;
+  text-decoration: none;
+  font-weight: bold;
+  color: #06365f;
+}
+.footer p {
+  color: gray;
 }
