--- a/styles/style.css
+++ b/styles/style.css
@@ -4,71 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-  background-color: #06365f;
-  heigh:100px;
-
- 
+	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	margin: 0;
+	background-image: url("../images/bgtile.png");
+	background-size: auto;
+	background-repeat: repeat-x;
 }
 
-
 .divider {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-content: space-around;
-  padding: 250px 50px 20px 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: space-around;
+	padding: 30px 160px 30px 160px;
 }
 
 .main {
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
+	display: flex;
+	justify-content: space-around;
+	align-content: center;
+	align-items: flex-start;
+	padding: 40px 30px;
 }
 
-.secondBox {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
+.sectionBox {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 5px 30px;
 }
 
 .navBar {
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;
+	display: flex;
+	justify-content: space-around;
+	align-content: stretch;
+	padding-bottom: 20px;
 }
 
-#brand-logo {
-  height: 60px;
+.Log_in p {
+	font-size: 0.8rem;
+	color: white;
 }
 
-#brand-logo {
-  height: 30px;
+.intro {
+	padding: 20px 40px;
+	border-radius: 6px 6px 6px 6px;
+	border: 0px solid #ffffff;
+	box-shadow: 2px 2px 28px 6px rgba(0, 0, 0, 0.62);
+	;
+	background-color: white;
 }
+
+.intro h1 {
+	color: #06365f;
+	font-size: 1.5rem;
+}
+
+.intro p {
+	color: black;
+	font-size: 1rem;
+	font-weight: 300;
+}
+
+.appStores {
+	display: flex;
+	justify-content: space-around;
+	align-items: flex-start;
+	padding: 30px
+}
+
+.appStores>div {
+	padding: 0px 10px
+}
+
 #footer {
-  color: grey; 
-  font-size: 0.5rem;
-  font-weight: 700;
-
+	color: grey;
+	font-size: 0.6rem;
+	font-weight: 700;
+	padding: 0 120px 50px;
 }
 
 #footer ul {
-  list-style: none;
+	list-style: none;
 	display: flex;
-	justify-content: space-around;
-  align-items: center;
-  padding: 10px 400px 10px 400px; 
+	justify-content: space-evenly;
+	align-items: center;
 }
 
 #footer a {
-  text-decoration: none;
-  color: #1c5380;
- }
+	text-decoration: none;
+	color: #1c5380;
+}
 
 .copyRight {
- color:grey;
- font-weight: 300;
+	color: grey;
+	font-weight: 300;
 }
