--- a/styles/style.css
+++ b/styles/style.css
@@ -16,29 +16,98 @@ body {
   background: linear-gradient(180deg, #1c5380 40%, #fff 40%);
 }
 
+.info-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 div.content {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 240px;
 }
 
 div.info {
-  padding: 50px 60px;
-  max-width: 600px;
+  padding: 50px 50px;
+  max-width: 800px;
   background-image: url(/images/frame.png);
   background-repeat: no-repeat;
+  margin-left: 30px;
 }
 
 div.logo-top-info {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  margin-bottom: 15px;
+  margin-left: 30px;
+}
+
+div.logo-top-info button {
+  width: 110px;
+  padding: 0px 8px;
+  height: 45px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  font-size: 1.1em;
+  font-weight: 800;
+  border-radius: 5px;
+  background-color: darkgrey;
+}
+
+.bottom-info h1 {
+  line-height: 35px;
+  width: 350px;
+  font-size: 1.7em;
+  margin-top: -10px;
+  margin-bottom: 20px;
+  color: #06365f;
+}
+
+.bottom-info p {
+  margin-top: 10px;
+  font-size: 1.1em;
+  line-height: 25px;
+  font-weight: 300;
 }
 
 div.bottom-info div {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 330px;
+  margin-top: 40px;
 }
 
 div.bottom-info {
   max-width: 400px;
+}
+
+footer {
+  width: 50%;
+  margin: 0px auto;
+  font-weight: 800;
+}
+
+footer ul {
+  display: flex;
+  justify-content: space-around;
+  min-width: 600px;
+  margin: 50px auto;
+}
+footer ul li {
+  text-decoration: none;
+  list-style-type: none;
+  color: #1c5380;
+  opacity: 0.7;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+
+footer ul p {
+  color: #7c7c7c;
+  opacity: 0.7;
+  text-transform: uppercase;
+  font-size: 0.8em;
 }
