--- a/styles/style.css
+++ b/styles/style.css
@@ -21,23 +21,19 @@ body {
 }
 
 .parent-container {
-  position: relative;
+  /* position: relative; */
 }
-
 .container {
   display: flex;
-  /* justify-content: space-between; */
-  /* background-color: chartreuse; */
   flex-wrap: wrap;
-  position: absolute;
-  top: 100px;
-  transform: translate(50%, -50%);
-  /* width: 50%; */
+  justify-content: center;
+  align-items: center;
+  margin-top: -200px;
+  /* max-width: 800px; */
 }
-
 .container-phone {
   height: 100%;
-  margin: 20px;
+  margin: 50px;
 }
 
 #phone {
@@ -54,16 +50,28 @@ body {
 
 .content-header {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
+  margin: 20px 0;
 }
 .content-header img {
   height: 50px;
 }
 
 .content-header button {
-  width: 25%;
-  height: 80%;
+  /* width: 30%; */
+  /* height: 80%; */
+  background-color: #1c5380;
+  background-image: url(../images/home.png);
+  background-repeat: no-repeat;
+  background-position: 5px center;
+  color: white;
+  padding: 10px 10px 10px 35px;
+  text-align: right;
+  font-size: 11px;
+  border: 1px solid #06365f;
 }
 
 .content-text {
@@ -76,6 +84,17 @@ body {
 p {
   margin-bottom: 20px;
 }
+.content-text h1 {
+  color: #1c5380;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 20px;
+}
+
+.content-text p {
+  font-size: 13px;
+  font-weight: 400;
+}
 
 #home-button {
   height: 20px;
@@ -85,7 +104,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  height: 50vh;
+  /* height: 50vh; */
   margin: 60px;
 }
 
@@ -98,4 +117,20 @@ footer ul {
 li {
   list-style-type: none;
   margin: 0 20px;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: 400;
+  font-size: 11px;
+}
+
+@media (max-width: 1023px) {
+  .content-header {
+    justify-content: space-evenly;
+  }
+  .content {
+    background-color: #1c5380;
+  }
+  .content-text {
+    border-radius: 0;
+  }
 }
