--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,80 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to top, white 60%, white 0%, #1c5380 40%, #1c5380 100%);
+  background-color: #06365f;
+  background-repeat:no-repeat;
 }
+
+#header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  position: absolute;
+  position: absolute;
+  right: 110px;
+  bottom: 100px;
+
+}
+
+#header-login{
+  position: absolute;
+  right: 500px;
+  top: 500px;
+
+}
+
+#phone-section {
+  display: flex;
+  flex-direction: row;
+ 
+}
+#phone-section img{
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  margin: 120px;
+  padding-top: 200px;
+
+}
+#login-btn {
+  position: absolute;
+  left: 500px;
+  width: 100px;
+
+}
+
+#main-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  left: 500px;
+  width: 600px;
+  margin-top: -560px;
+  background-color: white;
+}
+
+#main-section h2{
+  color: #06365f;
+  font-size: 24px;
+}
+
+.app-store {
+  display:flex;
+
+}
+
+#links ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  width: 600px;
+  padding-left: 450px;
+  color: #06365f;
+  
+}
+
