--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,183 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* html, body {
+  height: 100vh;
+}
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  
+  background: linear-gradient(360deg, white 55%, #426a8e 50%);
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+} */
+
+/* .home {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+}
+
+.content {
+  background: url("/images/frame.png") no-repeat center;
+  
+  
+}
+
+.right {
+  height: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: stretch;
+} */
+
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
   margin: 0;
+  font-family: "Heebo", sans-serif;
+  background: linear-gradient(360deg, white 57%, #426a8e 50%);
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.home {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.phone {
+  margin-right: 5rem;
+}
+
+.logoButton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logoButton img {
+  margin-left: 0rem;
+  margin-right: 0.9rem;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 6.5rem;
+  height: 2.8rem;
+  /* padding: 0.4rem; */
+  margin-right: 0.6rem;
+  text-align: center;
+  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 1px solid #2a465e;
+  border-radius: 3px;
+  font-weight: 900;
+  color: rgb(224, 224, 224);
+  background-color: #5b82a5;
+}
+
+.content {
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 32rem;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  /* justify-content: center; */
+  align-content: flex-start;
+}
+.content h1,
+h2,
+h3,
+h4 {
+  margin: 0 0 0 3rem;
+}
+
+.content h1 {
+  color: #194063;
+  width: 15rem;
+  margin-top: 3rem;
+  margin-bottom: 0.8rem;
+  font-size: 1.5rem;
+}
+
+.content h2 {
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 0 1rem 0 3rem;
+}
+
+.content h3 {
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 0.6rem 2.3rem 0 3rem;
+}
+
+.content h4 {
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 0.6rem 2.3rem 0 3rem;
+}
+
+.badges {
+  margin: 2rem 0 0 2.8rem;
+}
+
+.badges img {
+  margin-right: 1rem;
+}
+
+.footer {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: baseline;
+  align-content: center;
+}
+
+.footer a {
+  color: #426a8e;
+  text-decoration: none;
+}
+
+.footer li {
+  font-family: "Heebo";
+  list-style: none;
+  margin: 1rem;
+  font-weight: 900;
+  color: #b7b8b8;
+  font-size: 0.9rem;
+}
+
+.footer li :last-child {
+  color: #426a8e;
 }
