--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,12 @@ body {
 	justify-content: space-around;
 	align-content: stretch;
 	padding-bottom: 20px;
+	width: 550px;
+}
+
+.Log_in {
+	padding: 18px;
+	color: white;
 }
 
 .Log_in p {
