--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  /* border: 2px solid red; */
+
+
+
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  color: black;
+}
+
+
+.top {
+  background-color: #06365f;
+  height: 45vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.phones  {
+  margin-left: 180px;
+  margin-top: 150px;
+
+}
+.midle-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+#login-button{
+  border-color: #1c5380;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  width: 100px;
+  height: 40px;
+  background-color: #1c5380;
+}
+.btn{
+  height: 25px;
+  margin: 9px 4px;
+  font-size: 16px;
+  font-weight: 400;
+  color: white;
+}
+
+
+.midle {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: white;
+  width: 35%;
+  margin: 380px 300px 0 0;
+  box-shadow: 0px 0px 2px gray, 0 2px 2px -1px white inset; 
+
+}
+.midle h1 {
+  color: #06365f;
+  width: 65%;
+  margin-bottom: 25px;
+}
+.text {
+  padding: 14px;
+  background-color: white;
+  line-height: 1.5em;
+  margin-top: 45px;
+}
+.text p {
+  margin-bottom: 10px;
+}
+.ios, .android {
+  align-content: center;
+  margin-left: 15px;
+}
+
+.footer-flex {
+  color: #1c5380;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30%;
+  margin: 0 25% 0 25%;
+}
+
+.footer-flex > div {
+font-weight: bold;
+}
+.gray-footer {
+  color: #A7A7A7;;
+  font-weight: 100; 
+
 }
