--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,144 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* * { 
+  border: 1px solid red;
+} */
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+#header-external-div {
+  width: 100%;
+  height: 45vh;
+  background-color: #1c5380;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+#content-page{
+  position: absolute;
+  top: 15%;
+}
+
+.external-div {
+  display: flex;
+}
+
+.phones-div {
+  margin-left: 20%;
+}
+
+.phones-img {
+  height: 600px;
+}
+
+.internal-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.logos-images {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 20%;
+}
+
+.instagram-logo {
+  width: 450px;
+  margin-left: 11%;
+}
+
+.home-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15%;
+  width: 7%;
+  height: 15%;
+  background-color: #4a759a;
+  border: 1px solid #06365f;
+  border-radius: 8%;
+  padding: 1%;
+}
+
+.log-in {
+  color: #dee5eb;
+  font-weight: bold;
+  margin-left: 5px;
+  font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+.text-content {
+  width: 86%;
+  height: 45%;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 62.5%;
+  padding: 5%;
+  margin-left: 4%;
+}
+
+.content { 
+  width: 50%;
+  padding: 1%;
+}
+
+.text-content h1 {
+  font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  margin-top: 1px;
+  color: #0a2e55;
+  font-size: 1.8em;
+  width: 60%;
+}
+
+.content p {
+  font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-size: 1.2em;
+  font-weight: 500;
+  color: #6f6f6f;
+}
+
+.content p b {
+  color: #414141;
+}
+
+.badges {
+  width: 33%;
+  height: 7%;
+  display: flex;
+  justify-content: space-around;
+  margin-left: 10%;
+  margin-top: 30px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-right: 11%;
+  margin-bottom: 1%;
+  font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+footer > ul {
+  display: flex;
+  list-style: none;
+}
+
+footer li a {
+  text-decoration: none;
+  margin-right: 15px;
+  color: #6589a8;
+  font-weight: bold;
+}
+
+footer .copy-right {
+  margin-left: 45px;
+  color: #c1c2c3;
+  font-weight: bold;
 }
